@@ -1,7 +1,11 @@
 package de.placeblock.unuserver.game.round;
 
+import com.fasterxml.jackson.annotation.JsonIgnore;
 import de.placeblock.unuserver.Main;
 import de.placeblock.unuserver.cards.Card;
+import de.placeblock.unuserver.cards.Color;
+import de.placeblock.unuserver.cards.DrawStackApplier;
+import de.placeblock.unuserver.cards.impl.NumberCard;
 import de.placeblock.unuserver.game.Room;
 import de.placeblock.unuserver.player.Inventory;
 import de.placeblock.unuserver.player.Player;
@@ -10,23 +14,26 @@ import lombok.RequiredArgsConstructor;
 import lombok.Setter;
 
 import java.util.*;
+import java.util.concurrent.ThreadLocalRandom;
 
 @Getter
 public class Round {
+    @JsonIgnore
     private final Room room;
     private final List<RoundPlayer> players = new ArrayList<>();
     private final RoundSettings roundSettings;
     private RoundPlayer currentPlayer;
     // Players who have to shout "UNO!"
     private final List<RoundPlayer> acknowledgeLastCardPlayers = new ArrayList<>();
-    private final LinkedList<Card> cardStack = new LinkedList<>();
-    private final List<Card> placedCards = new ArrayList<>();
+    private final LinkedList<Card<?>> cardStack = new LinkedList<>();
+    private final LinkedList<Card<?>> placedCards = new LinkedList<>();
     private int placedCardsAll = 0;
     private int drawStack = 0;
     @Setter
     private int nextPlayerDelta = 1;
+    private boolean hasPlayerDrawnCard = false;
 
-    public Round(Room room, RoundSettings roundSettings, List<Player> players, List<Card> cardStack) {
+    public Round(Room room, RoundSettings roundSettings, List<Player> players, List<Card<?>> cardStack) {
         Main.LOGGER.info("Creating Round for Room " + room.getCode());
         this.room = room;
         this.roundSettings = roundSettings;
@@ -37,12 +44,39 @@ public class Round {
             this.players.add(roundPlayer);
         }
         int randomPlayerIndex = (int) (Math.random() * this.players.size());
-        this.setNextPlayer(this.players.get(randomPlayerIndex));
+        this.currentPlayer = this.players.get(randomPlayerIndex);
+        Collections.shuffle(cardStack);
         this.cardStack.addAll(cardStack);
-        for (RoundPlayer player : this.players) {
-            List<Card> cards = this.drawCards(roundSettings.getStartCardAmount());
-            player.getInventory().addCards(cards);
-            player.getPlayer().setInventory(player.getInventory());
+        this.placedCards.add(this.getBeginningCard());
+        for (RoundPlayer roundPlayer : this.players) {
+            List<Card<?>> cards = this.drawCards(roundSettings.getStartCardAmount());
+            roundPlayer.getInventory().addCards(cards);
+        }
+        RoundData roundData = RoundData.fromRound(this);
+        for (RoundPlayer roundPlayer : this.players) {
+            Player player = roundPlayer.getPlayer();
+            player.setRoundData(roundData);
+            player.setInventory(roundPlayer.getInventory());
+        }
+    }
+
+    private Card<?> getBeginningCard() {
+        List<Card<?>> beginCards = new ArrayList<>();
+        for (Card<?> card : this.cardStack) {
+            if (card.canBeginWith()) {
+                beginCards.add(card);
+            }
+        }
+        if (beginCards.size() > 0) {
+            Collections.shuffle(beginCards);
+            Card<?> beginCard = beginCards.get(0);
+            this.cardStack.remove(beginCard);
+            return beginCard;
+        } else {
+            int number = ThreadLocalRandom.current().nextInt(0, 10);
+            int colorIndex = ThreadLocalRandom.current().nextInt(0, 4);
+            Color color = Color.values()[colorIndex];
+            return new NumberCard(number, color);
         }
     }
 
@@ -59,11 +93,12 @@ public class Round {
     }
 
     public void removePlayer(RoundPlayer roundPlayer, RemovePlayerReason reason) {
+        this.players.remove(roundPlayer);
         if (this.players.size() == 1) {
+            this.room.getLeaderboard().addWin(this.players.get(0).getPlayer());
             this.room.endRound();
             return;
         }
-        this.players.remove(roundPlayer);
         this.room.executeForPlayers(p -> p.removeRoundPlayer(roundPlayer, reason));
         if (this.currentPlayer.equals(roundPlayer)) {
             this.setNextPlayer(this.calculateNextPlayer());
@@ -87,48 +122,54 @@ public class Round {
 
     // CARD MANAGEMENT
 
-    public Card getCurrentCard() {
-        return this.placedCards.get(this.placedCards.size()-1);
+    public Card<?> getCurrentCard() {
+        return this.placedCards.getLast();
     }
 
-    public void placeCard(RoundPlayer roundPlayer, Card card) {
-        if (!this.currentPlayer.equals(roundPlayer) ||
-            !this.canPlaceCard(card) ||
-            !roundPlayer.getInventory().hasCard(card)) return;
-        // TODO: CHECK CURRENT MOVE STATE
+    public void placeCard(RoundPlayer roundPlayer, UUID cardUUID) {
+        Card<?> card = roundPlayer.getInventory().getCard(cardUUID);
+        if (card == null ||
+            !this.currentPlayer.equals(roundPlayer) ||
+            !this.canPlaceCard(card)) return;
         // Players that didn't say UNO before the next player places a card get punished
         this.punishNotAcknowledgedPlayers();
         this.placeCard(card);
-        roundPlayer.incPlacedCards();
+        if (card instanceof DrawStackApplier) {
+            this.applyDrawStack(roundPlayer);
+        }
+        roundPlayer.getPlayer().removeCard(cardUUID);
         roundPlayer.getInventory().removeCard(card);
+        roundPlayer.incPlacedCards();
 
         if (roundPlayer.getInventory().size() == 0) {
             this.removePlayer(roundPlayer, RemovePlayerReason.WON);
         }
+
+        this.setNextPlayer(this.calculateNextPlayer());
     }
 
     public void drawCard(RoundPlayer roundPlayer) {
-        if (!this.currentPlayer.equals(roundPlayer)) return;
-        // TODO: IMPLEMENT
-        // TODO: CHECK CURRENT MOVE STATE
+        if (!this.currentPlayer.equals(roundPlayer) ||
+            this.hasPlayerDrawnCard) return;
+        this.hasPlayerDrawnCard = true;
         // Players that didn't say UNO before the next player draws a card get punished
         this.punishNotAcknowledgedPlayers();
         this.applyDrawStack(roundPlayer);
-        Card card = this.drawCard();
+        Card<?> card = this.drawCard();
         roundPlayer.getInventory().addCard(card);
-        roundPlayer.getPlayer().confirmDrawnCard(card, DrawReason.DRAW);
+        roundPlayer.getPlayer().addCard(card, AddCardReason.DRAW);
     }
 
-    public Card drawCard() {
-        Card card = this.cardStack.pop();
+    public Card<?> drawCard() {
+        Card<?> card = this.cardStack.pop();
         if (this.cardStack.isEmpty()) {
             this.refillCardStack();
         }
         return card;
     }
 
-    public List<Card> drawCards(int amount) {
-        List<Card> drawnCards = new ArrayList<>();
+    public List<Card<?>> drawCards(int amount) {
+        List<Card<?>> drawnCards = new ArrayList<>();
         for (int i = 0; i < amount; i++) {
             drawnCards.add(this.drawCard());
         }
@@ -137,11 +178,11 @@ public class Round {
 
     public void applyDrawStack(RoundPlayer roundPlayer) {
         if (this.drawStack == 0) return;
-        List<Card> cards = this.drawCards(this.drawStack);
+        List<Card<?>> cards = this.drawCards(this.drawStack);
         this.setDrawStack(0);
-        for (Card card : cards) {
+        for (Card<?> card : cards) {
             roundPlayer.getInventory().addCard(card);
-            roundPlayer.getPlayer().confirmDrawnCard(card, DrawReason.DRAW_STACK);
+            roundPlayer.getPlayer().addCard(card, AddCardReason.DRAW_STACK);
         }
     }
 
@@ -151,15 +192,16 @@ public class Round {
     }
 
     private void refillCardStack() {
-        List<Card> oldCards = this.placedCards.subList(0, this.placedCards.size() - 1);
-        this.cardStack.addAll(oldCards);
+        for (int i = 0; i < this.placedCards.size() - 1; i++) {
+            this.cardStack.push(this.placedCards.pop());
+        }
     }
 
-    public boolean canPlaceCard(Card card) {
-        return this.getCurrentCard().isValidNextCard(card);
+    public boolean canPlaceCard(Card<?> card) {
+        return this.getCurrentCard().isValidNextCard(this, card);
     }
 
-    public void placeCard(Card card) {
+    public void placeCard(Card<?> card) {
         card.place(this);
         this.placedCards.add(card);
         this.room.executeForPlayers(p -> p.setPlacedCard(card));
@@ -177,16 +219,16 @@ public class Round {
      */
     private void punishNotAcknowledgedPlayers() {
         for (RoundPlayer roundPlayer : this.acknowledgeLastCardPlayers) {
-            List<Card> drawnCards = this.drawCards(2);
-            for (Card drawnCard : drawnCards) {
+            List<Card<?>> drawnCards = this.drawCards(2);
+            for (Card<?> drawnCard : drawnCards) {
                 roundPlayer.getInventory().addCard(drawnCard);
-                roundPlayer.getPlayer().confirmDrawnCard(drawnCard, DrawReason.NO_LAST_CARD_ACKNOWLEDGE);
+                roundPlayer.getPlayer().addCard(drawnCard, AddCardReason.NO_LAST_CARD_ACKNOWLEDGE);
             }
         }
     }
 
 
-    public enum DrawReason {
+    public enum AddCardReason {
         DRAW,
         DRAW_STACK,
         NO_LAST_CARD_ACKNOWLEDGE,
@@ -206,6 +248,7 @@ public class Round {
         private final UUID currentPlayer;
         private final Map<UUID, Integer> playerCards;
         private final int drawStack;
+        private final List<Card<?>> placedCards;
 
         public static RoundData fromRound(Round round) {
             Map<UUID, Integer> playerCards = new HashMap<>();
@@ -216,7 +259,8 @@ public class Round {
                     round.getPlayers().stream().map(p -> p.getPlayer().getUuid()).toList(),
                     round.getCurrentPlayer().getPlayer().getUuid(),
                     playerCards,
-                    round.getDrawStack()
+                    round.getDrawStack(),
+                    round.placedCards
             );
         }
     }
